阿里云-智能语音交互：通过SDK获取Token： - 通过SDK获取Token：https://help.aliyun.com/zh/isi/getting-started/obtain-an-access-token - go get -u github.com/aliyun/alibaba-cloud-sdk-go/sdk - http://127.0.0.1:18000/v1/aliyun/nls/token
